ZODB Requires:
~~~~~~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
- Italian translation.
-
Bug fixes:
~~~~~~~~~~
- EmailWidget was always mandatory.
-
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
-